# The-Rauch-Music-Player

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  Program.cpp  README.txt  RauchAudio.h  RauchGUI.h  RauchInput.h  RauchSprite.h  Rauch_Music_Player  Shader.h  The Rauch Music Player.sln  The Rauch Music Player.vcxproj  The Rauch Music Player.vcxproj.filters  The_Rauch_Audio_Player  glad.c  resource.h
Dependencies/: DEPENDENCIES LICENSES.txt
Dependencies/Include/glad/: glad.h
Dependencies/Libs/: soundio.lib
Shaders/: FragmentShader2D.frag  FragmentShaderRect.frag  FragmentShaderText.frag  VertexShaderRect.vert  VertexShaderText.vert  controls.frag
rmpResources/Playlists/: rootlib.rauchplaylist
rmpResources/Shaders/: VertexShader2D.vert
